# Personalised-Career-Agent

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  vectordb.py
me/: summary.txt
